--- a/src/scss/_Sidebar.scss
+++ b/src/scss/_Sidebar.scss
@@ -28,6 +28,17 @@
   color: white;
 }
 
+.stars {
+  margin: 0 auto;
+}
+
+.user-img {
+  width: 100px;
+  height: 100px;
+  margin: 10px auto;
+  border: 2px solid #fff;
+}
+
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
