--- a/src/scss/_Notifications.scss
+++ b/src/scss/_Notifications.scss
@@ -2,11 +2,16 @@
   position: absolute;
   top: 3%;
   left: 3%;
-}
 
-.noti svg {
-  cursor: pointer;
-  font-size: 30px;
-  z-index: 1;
-  color: #440c5a;
+  svg {
+    cursor: pointer;
+    font-size: 30px;
+    z-index: 1;
+    color: #440c5a;
+  }
+
+  &-link {
+    color: black;
+    text-decoration: none;
+  }
 }
