added profile image

--- a/src/scss/_Sidebar.scss
+++ b/src/scss/_Sidebar.scss
@@ -33,8 +33,9 @@
 }
 
 .user-img {
-  width: 100px;
-  height: 100px;
+  cursor: pointer;
+  width: 156px;
+  height: 114px;
   margin: 10px auto;
   border: 2px solid #fff;
 }
