made Details component reuseable and made shered storage object for store user in storage

--- a/src/scss/_Work.scss
+++ b/src/scss/_Work.scss
@@ -12,9 +12,7 @@
   animation: animatedOpacity 700ms linear;
 
   button {
-    position: absolute;
-    bottom: 22px;
-    left: 10px;
+    margin: 10px;
     height: 40px;
     padding: 0 12px;
   }
