maillist also for schools,desc for users,sorted works by date,added toastify to show error messages on clashes

--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -10,10 +10,10 @@
 
 .modal-overlay {
   position: fixed;
-  top: 2%;
+  top: 0;
   left: 35%;
   width: auto;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 7px;
   box-shadow: 0 2px 200px #000;
   z-index: 30 !important;
