--- a/src/scss/_Login.scss
+++ b/src/scss/_Login.scss
@@ -10,3 +10,10 @@
     width: 100%;
   }
 }
+
+.login-error {
+  text-align: center;
+  font-size: 20px !important;
+  margin: 0 auto 5px !important;
+  color: #dc3545 !important;
+}
