added little bit styling

--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -16,8 +16,18 @@
   }
 }
 
+.filter {
+  width: 85%;
+  padding: 10px 20px;
+  direction: rtl;
+}
+
 @media (max-width: 768px) {
   .works {
     display: block;
+    width: 100%;
+  }
+  .filter {
+    width: 100%;
   }
 }
