showing error message whan signin up with non unique mail

--- a/src/scss/_Work.scss
+++ b/src/scss/_Work.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 10px 0;
   direction: rtl;
-  display: flex;
+  display: block;
   justify-content: center;
   gap: 3rem;
   border: 2px solid black;
