--- a/src/scss/_Work.scss
+++ b/src/scss/_Work.scss
@@ -37,7 +37,7 @@
 @media (max-width: 768px) {
   .work {
     display: block;
-    width: 100%;
-    margin: 10px 0;
+    width: 90%;
+    margin: 20px auto;
   }
 }
