--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -18,7 +18,7 @@
   box-shadow: 0 2px 200px #000;
   z-index: 30 !important;
   animation: slide-down 300ms ease-out forwards;
-  background-color: rgb(59, 22, 146);
+  background-color: #00749b;
 }
 
 .content {
