--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -14,7 +14,11 @@
   box-sizing: border-box;
 }
 body {
-  background: rgb(206, 205, 205);
+  background-image: url("../assets/substitutes-background.jpg") !important;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 100vh;
   text-align: right;
 }
 
@@ -25,6 +29,7 @@ nav {
 h1,
 h2 {
   margin-right: 15%;
+  padding-top: 1%;
   padding-bottom: 2%;
 }
 
@@ -32,6 +37,16 @@ h2 {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.light-blue__btn {
+  background-color: #5bd4ef !important;
+  border: #5bd4ef !important;
+}
+
+.light-blue__btn:hover {
+  background-color: #a3e2f0 !important;
+  border: #a3e2f0 !important;
 }
 
 @media (max-width: 768px) {
