--- a/src/scss/_Apply.scss
+++ b/src/scss/_Apply.scss
@@ -2,9 +2,9 @@
   object-fit: cover;
   height: 35px;
   width: 35px;
-  border-radius: 50%;
-  border: 2px solid;
+  box-shadow: 0px 0px 9px rgb(163, 161, 161);
   display: inline-block;
   margin: 0 5px;
+  border-radius: 50%;
   cursor: pointer;
 }
