--- a/src/scss/_Notifications.scss
+++ b/src/scss/_Notifications.scss
@@ -1,17 +1,25 @@
 .noti {
-  position: absolute;
-  top: 1.5%;
-  left: 3%;
+  background-color: #e38f4b;
+  text-align: left;
+  padding: 1% 0;
 
   svg {
     cursor: pointer;
     font-size: 35px;
     z-index: 1;
-    color: #440c5a;
+    color: #003d64;
   }
 
   &-link {
     color: black;
     text-decoration: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .noti {
+    position: absolute;
+    background: transparent;
+    top: 0;
   }
 }
