--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   width: 100%;
   background-color: #e38f4b;
-  padding: 15px 0 15px 15px;
+  padding: 15px;
 
   &__span {
     display: inline-block;
@@ -19,7 +19,7 @@
   .filter-btn {
     position: absolute;
     bottom: 10%;
-    left: 0.5%;
+    left: 1%;
     padding: 1px 8px;
   }
 
@@ -52,9 +52,9 @@
       width: 100%;
       margin-bottom: 10px;
     }
-
     .filter-btn {
-      bottom: 10%;
+      bottom: 17%;
+      left: 3%;
     }
   }
 }
