--- a/src/scss/_Apply.scss
+++ b/src/scss/_Apply.scss
@@ -4,7 +4,7 @@
   width: 35px;
   box-shadow: 0px 0px 9px rgb(163, 161, 161);
   display: inline-block;
-  margin: 0 5px;
+  margin: 5px;
   border-radius: 50%;
   cursor: pointer;
 }
