--- a/src/scss/_Notifications.scss
+++ b/src/scss/_Notifications.scss
@@ -1,7 +1,8 @@
 .noti {
   background-color: #e38f4b;
   text-align: left;
-  padding: 1% 0;
+  padding: 0 1.5%;
+  height: 3rem;
 
   svg {
     cursor: pointer;
