--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -1,10 +1,10 @@
 .filter-form {
-  position: absolute;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 1rem;
   width: 100%;
   background-color: #e38f4b;
-  padding: 15px;
+  padding-bottom: 4%;
 
   &__span {
     display: inline-block;
@@ -12,15 +12,19 @@
     width: 100%;
   }
 
+  .hours-input input {
+    text-align: left;
+  }
+
   label {
-    width: 25%;
+    width: 20%;
     color: #fff;
   }
   .filter-btn {
     position: absolute;
-    bottom: 10%;
-    left: 1%;
-    padding: 1px 8px;
+    bottom: 33.5%;
+    left: 3.5%;
+    padding: 2px 10px;
   }
 
   .react-datepicker__navigation {
@@ -32,8 +36,8 @@
   .filter-form {
     position: relative;
     margin: 0 auto;
-    padding-left: 17%;
-    padding-top: 5%;
+    padding: 5% 2% 4% 17%;
+    gap: 7%;
 
     .city-input {
       width: 25%;
@@ -53,8 +57,7 @@
       margin-bottom: 10px;
     }
     .filter-btn {
-      bottom: 17%;
-      left: 3%;
+      bottom: 16%;
     }
   }
 }
