--- a/src/scss/_Work.scss
+++ b/src/scss/_Work.scss
@@ -22,6 +22,10 @@
     display: flex;
     justify-content: space-between;
     margin: 0 7%;
+
+    &-appliers {
+      padding-top: 4px;
+    }
   }
 
   .delete__btn {
@@ -55,5 +59,8 @@
     display: block;
     width: 95%;
     margin: 20px auto;
+  }
+  .extras-appliers {
+    width: 35%;
   }
 }
