--- a/src/scss/_Work.scss
+++ b/src/scss/_Work.scss
@@ -5,7 +5,7 @@
   display: block;
   justify-content: center;
   gap: 3rem;
-  width: 47%;
+  min-width: 470px;
   border-radius: 10px;
   margin: 10px;
   animation: animatedOpacity 700ms linear;
@@ -25,6 +25,8 @@
     position: relative;
 
     &-appliers {
+      display: flex;
+      flex-wrap: wrap;
       padding-top: 4px;
     }
     &-actions {
@@ -60,10 +62,12 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .work {
     display: block;
-    width: 95%;
+    min-width: 0;
+    max-width: 470px;
+    width: 90%;
     margin: 20px auto;
   }
   .extras-appliers {
