--- a/src/scss/_Login.scss
+++ b/src/scss/_Login.scss
@@ -14,8 +14,8 @@
 .login-error {
   text-align: center;
   font-size: 20px !important;
-  margin: 0 auto 5px !important;
-  color: #dc3545 !important;
+  margin: 0 auto 10px !important;
+  color: rgb(41, 2, 2) !important;
 }
 
 .check-email {
