--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -9,7 +9,8 @@
   padding-bottom: 4%;
 
   input {
-    border-radius: 25px;
+    border-radius: 7px;
+    border: none;
     padding: 0 8px;
   }
 
@@ -35,7 +36,7 @@
       width: 30px;
       border-radius: 25px;
       padding: 0 3px;
-      bottom: 10%;
+      bottom: 13%;
       svg {
         font-size: 14px;
       }
