--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -11,8 +11,8 @@
 }
 
 .modal-overlay {
-  position: fixed;
-  top: 45%;
+  position: absolute;
+  top: 29%;
   left: 42.5%;
 
   transform: translate(-50%, -50%);
@@ -32,7 +32,7 @@
   color: #fff;
   min-height: 5rem;
   width: 100%;
-  max-height: 27rem;
+  max-height: 17rem;
   overflow: auto;
   overflow-x: hidden;
   padding-right: 1rem;
