--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -1,5 +1,3 @@
-//
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -11,8 +9,8 @@
 }
 
 .modal-overlay {
-  position: absolute;
-  top: 29%;
+  position: fixed;
+  top: 44%;
   left: 42.5%;
 
   transform: translate(-50%, -50%);
@@ -32,7 +30,7 @@
   color: #fff;
   min-height: 5rem;
   width: 100%;
-  max-height: 17rem;
+  max-height: 27rem;
   overflow: auto;
   overflow-x: hidden;
   padding-right: 1rem;
