--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -41,6 +41,17 @@
   }
 }
 
+.close-btn {
+  display: inline;
+  color: #fff;
+  font-size: 1.5rem;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
+}
 @media (max-width: 992px) {
   .modal-overlay {
     left: 50%;
