added scrollbar to modal and removed margin from form,changed filter form inputs size

--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -53,15 +53,15 @@
     padding-left: 3%;
     gap: 0.5rem;
     .city-input input {
-      width: 100%;
+      width: 70px;
     }
 
     .hours-input input {
-      width: 50%;
+      width: 50px;
     }
 
     .date-input input {
-      width: 90%;
+      width: 60px;
     }
   }
 }
