button in modal margin and password placeholder

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -79,6 +79,10 @@ input[type="number"] {
   border: #a3e2f0 !important;
 }
 
+.form-btn {
+  margin-top: 8px;
+}
+
 @media (max-width: 992px) {
   body {
     width: 100%;
