--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -5,7 +5,7 @@
   gap: 1rem;
   width: 85%;
   margin: 0 auto;
-  background-color: #e38f4b;
+  background-color: #56b9b4;
   padding-bottom: 4%;
 
   input {
