--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -20,7 +20,7 @@
   width: 85%;
   direction: rtl;
   padding: 0 !important;
-  background-color: #e38f4b;
+  background-color: #56b9b4;
 
   .me-auto {
     margin-right: 0 !important;
