--- a/src/scss/_Sidebar.scss
+++ b/src/scss/_Sidebar.scss
@@ -6,7 +6,7 @@ a {
 
 .navbar,
 .sidebar {
-  background: #d36104;
+  background: #0a8781;
 }
 
 .sidebar {
@@ -33,7 +33,7 @@ a {
 }
 
 .sidebar a:hover:not(.active) {
-  background-color: #e38f4b;
+  background-color: #53d6cf;
   color: white;
 }
 
