storing justloggedin only when logging in and not when updating profile,made old works grey and change add work button

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,6 +23,7 @@ body {
   background-position: center center;
   min-height: 100vh;
   text-align: right;
+  font-size: 0.95rem !important;
 }
 
 nav {
