--- a/src/scss/_SchoolWorks.scss
+++ b/src/scss/_SchoolWorks.scss
@@ -1,12 +1,12 @@
 .add-work__btn {
   width: 85%;
   text-align: right;
-  padding: 2% 3% 0;
+  padding: 2% 3.25% 0;
+  margin: 10px 0;
 
   button {
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 1.5rem;
+    width: 7rem;
+    font-size: 1rem;
     padding-top: 0;
   }
 }
