--- a/src/scss/_Login.scss
+++ b/src/scss/_Login.scss
@@ -20,7 +20,12 @@
 }
 
 .check-email {
-  padding: 5px 0;
+  padding: 5px 1.5em 5px 0 !important;
+  input {
+    float: right !important;
+    margin-right: -1.5em !important;
+    cursor: pointer;
+  }
 }
 
 .password-desc::-webkit-input-placeholder {
