--- a/src/scss/_Sidebar.scss
+++ b/src/scss/_Sidebar.scss
@@ -49,7 +49,7 @@ a {
   cursor: pointer;
   width: 100px;
   height: 100px;
-  object-fit: contain;
+  object-fit: cover;
   margin: 10px auto;
   border: 2px solid #fff;
 }
