--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -21,7 +21,7 @@
   box-shadow: 0 2px 200px #000;
   z-index: 30 !important;
   animation: slide-down 300ms ease-out forwards;
-  background-color: #80a3aa;
+  background-color: #417985;
   padding: 1rem;
   padding-bottom: 2rem;
 }
