--- a/src/scss/_Modal.scss
+++ b/src/scss/_Modal.scss
@@ -57,17 +57,17 @@
 
 /* Track */
 .content::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px rgb(207, 207, 207);
   border-radius: 10px;
 }
 
 .content::-webkit-scrollbar-thumb {
-  background: #4d7983;
+  background: #7cc3d3;
   border-radius: 10px;
 }
 
 .content::-webkit-scrollbar-thumb:hover {
-  background: #6f7f82;
+  background: #a2e2f0;
 }
 @media (max-width: 992px) {
   .modal-overlay {
