--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -34,12 +34,17 @@ nav {
 h1,
 h2 {
   margin-right: 15%;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
 }
 
 h1 {
-  padding-top: 2%;
-  font-size: 3rem !important;
+  padding-top: 1%;
+  font-size: 2.25rem !important;
+}
+
+h2 {
+  font-size: 1.5rem !important;
+  margin-top: 1rem !important;
 }
 
 input {
@@ -85,6 +90,8 @@ input[type="number"] {
 .form-btn {
   margin-top: 8px;
 }
+
+
 
 @media (max-width: 992px) {
   body {
