--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 85%;
+  padding: 0;
 
   &-work-exit-active {
     opacity: 0;
@@ -42,6 +43,7 @@
   width: 85%;
   font-size: 1rem;
   font-weight: 500;
+  padding-top: 2rem;
 }
 
 @media (max-width: 992px) {
