--- a/src/scss/_SchoolWorks.scss
+++ b/src/scss/_SchoolWorks.scss
@@ -19,6 +19,16 @@
   direction: rtl;
 }
 
+.main-title {
+  background-color:rgb(66, 89, 81);
+  color: aliceblue;
+}
+
+.old-section {
+  background-color: rgb(209, 224, 224);
+  padding: 1rem;
+}
+
 @media (max-width: 992px) {
   .add-work__btn {
     width: 100%;
