--- a/src/scss/_FilterForm.scss
+++ b/src/scss/_FilterForm.scss
@@ -31,18 +31,17 @@ padding-top: 10px;
   label {
     color: #fff;
     height: 70px;
-    width: 250px;
+    flex: 1;
   }
   .filter-btn {
     position: relative;
     button {
       position: absolute;
-      height: 30px;
-      width: 30px;
+      height: 25px;
+      width: 25px;
       border-radius: 25px;
       padding: 0 3px;
-      top: 29%;
-      right: -15px;
+      top: 30%;
       svg {
         font-size: 14px;
       }
