--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -41,9 +41,14 @@
 
 .home-page__desc {
   width: 85%;
-  font-size: 1rem;
-  font-weight: 500;
-  padding-top: 2rem;
+  font-size: 0.9rem;
+  font-weight: 400;
+  padding: 2rem 5rem 0;
+  text-align: right;
+  
+   &__title {
+    text-align: center;
+   }
 }
 
 @media (max-width: 992px) {
@@ -62,7 +67,8 @@
     }
   }
   .home-page__desc {
-    width: 90%;
+    width: 100%;
     margin: 10px auto;
+    padding: 2rem 3rem;
   }
 }
