--- a/src/scss/_Notifications.scss
+++ b/src/scss/_Notifications.scss
@@ -1,6 +1,6 @@
 .noti {
   background-color: #0a8781;
-  text-align: left;
+  text-align: center;
   padding: 0.5% 1.5%;
   display: flex;
   justify-content: center;
