--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -45,10 +45,10 @@
   font-weight: 400;
   padding: 2rem 5rem 0;
   text-align: right;
-  
-   &__title {
+
+  &__title {
     text-align: center;
-   }
+  }
 }
 
 @media (max-width: 992px) {
@@ -70,5 +70,9 @@
     width: 100%;
     margin: 10px auto;
     padding: 2rem 3rem;
+
+    &__title {
+      padding: 0 2.5rem;
+    }
   }
 }
