remove body padding

--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -43,7 +43,7 @@
   width: 85%;
   font-size: 0.9rem;
   font-weight: 400;
-  padding: 2rem 5rem 0;
+  padding: 2rem 5rem;
   text-align: right;
 
   &__title {
