--- a/src/scss/_Home.scss
+++ b/src/scss/_Home.scss
@@ -68,11 +68,11 @@
   }
   .home-page__desc {
     width: 100%;
-    margin: 10px auto;
-    padding: 2rem 3rem;
+    padding: 2rem;
 
     &__title {
-      padding: 0 2.5rem;
+      width: 90%;
+      margin: 0 auto;
     }
   }
 }
